--- a/templates/footer.html
+++ b/templates/footer.html
@@ -13,7 +13,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://www.instagram.com/rudzani_mashige/">
+              <a href="https://www.facebook.com/profile.php?id=100023298247475">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
